# Novel_Recommendation_App

./: README.md
novel_recommendation_app/: .gitignore  pubspec.yaml
novel_recommendation_app/backend/: auth.py  database.py  db_check.py  main.py  models.py  novel_loader.py  pyproject.toml  requirements.txt  schemas.py
novel_recommendation_app/backend/embeddings/: novel_embeddings_e5.npy
novel_recommendation_app/backend/recommender/: bert_recommender.py  embedder.py  evaluate.py  generate_embeddings.py  preprocess.py  recommend.py
novel_recommendation_app/backend/recommender/models/: bert_model.py  bge_model.py  e5_model.py
novel_recommendation_app/lib/models/: novel.dart
novel_recommendation_app/lib/screens/auth/: login_screen.dart  signup_screen.dart
novel_recommendation_app/lib/screens/home/: home_screen.dart
novel_recommendation_app/lib/screens/novel/: novel_detail_screen.dart
novel_recommendation_app/lib/screens/onboarding/: genre_selection_screen.dart
novel_recommendation_app/lib/screens/wishlist/: wishlist_screen.dart
novel_recommendation_app/lib/services/: api_service.dart
novel_recommendation_app/lib/widgets/: custom_button.dart  custom_textfield.dart
