[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "bcrypt==5.0.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "fastapi==0.128.0",
    "greenlet==3.3.1",
    "h11==0.16.0",
    "idna==3.11",
    "numpy==2.4.1",
    "pandas==3.0.0",
    "passlib==1.7.4",
    "pydantic[email,email-validator]==2.12.5",
    "pydantic-core==2.41.5",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.22",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "six==1.17.0",
    "sqlalchemy==2.0.46",
    "starlette==0.50.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "uvicorn==0.40.0",
]
